--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,11 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+
+  
 }
+
+
 
 .App-header {
   background-color: #282c34;
@@ -36,3 +40,318 @@
     transform: rotate(360deg);
   }
 }
+
+.nav{
+  background: #9cb2a5;
+  /* background: transparent; */
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem calc((100vw - 1000px) / 2);
+  z-index: 10;
+  /* Third Nav */
+   justify-content: flex-start; 
+}
+
+.navLink{
+  color: #e3dbd3;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0 1rem;
+  height: 100%;
+  cursor: pointer;
+  
+}
+
+.Bars {
+  display: none;
+  color: #F68989;
+  
+}
+@media screen and (max-width: 768px) {
+  .Bars{
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 75%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+}
+
+
+.NavMenu{
+  display: flex;
+  align-items: center;
+  
+  /* Second Nav */
+  /* margin-right: 24px; */
+  /* Third Nav */
+  width: 100vw;
+  white-space: nowrap; 
+  
+}
+
+@media screen and (max-width: 768px) {
+  .NavMenu{
+    display: none;
+  }
+}
+
+
+
+
+.navLink:active{
+  color: #874356;
+}
+
+.navBtn {
+  display: flex;
+  align-items: center;
+  margin-right: 24px;
+  /* Third Nav */
+  /* justify-content: flex-end;
+  width: 100vw; */
+}
+
+@media screen and (max-width: 768px) {
+  .navBtn {
+    display: none;
+
+  }
+}
+
+
+/*Sidebar*/
+
+.aside-container{
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background: #e06377;
+  display: grid;
+  align-items: center;
+  top: 0;
+  left: 0;
+  transition: 0.3s ease-in-out;
+  /*opacity: ${({isOpen}) => (isOpen)};*/
+  /*top*/
+  top:0;
+}
+
+.close-icon {
+  color:#fff
+}
+
+.icon{
+  position: absolute;
+  top: 1.2rem;
+  right: 1.5rem;
+  background: transparent;
+  font-size: 2rem;
+  cursor:pointer;
+  outline: none;
+}
+
+.sidebarWrapper {
+  color: #fff;
+}
+
+.sidebarMenu { 
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(6,80px);
+  text-align: center;
+}
+@media screen and (max-width: 400px) {
+  .sidebarMenu {
+    grid-template-rows: repeat(6,60px);
+
+  }
+}
+
+.sidebarLink {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  text-decoration: none;
+  list-style: none;
+  transition: 0.2s ease-in-out;
+  color: #fff;
+  cursor: pointer;
+}
+.sidebarLink:hover {
+  color: #c83349;
+  transition: 0.2s ease-in-out;
+}
+
+
+/* home page */
+
+.principaldiv{
+  background-color: #fff ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  height: 800px;
+  position: relative;
+  z-index: 1;
+}
+
+.videoContainer {
+  position: relative;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.videoPrincipal{
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  background: #e06377;
+}
+
+.tittleContainer{
+  z-index: 3;
+  max-width: 1200px;
+  position: absolute;
+  padding: 8px 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.h1tittle{
+  color: #733236;
+  font-size: 48px;
+  text-align: center;
+}
+     
+@media screen and (max-width: 768px) {
+  .h1tittle{
+    font-size: 40px;
+  }
+}
+
+
+@media screen and (max-width: 480px) {
+  .h1tittle{
+    font-size: 32px;
+  }
+}
+
+.pSubtittle{
+  margin-top: 24px;
+  color: #733236;
+  font-size: 24px;
+  text-align: center;
+  max-width: 600px;
+
+}
+
+@media screen and (max-width: 768px) {
+  .pSubtittle{
+    font-size: 24px;
+  }
+}
+
+
+@media screen and (max-width: 480px) {
+  .pSubtittle{
+    font-size: 18px;
+  }
+}
+
+
+.nosotros {
+  width: 100%;
+  padding: 78px 0px;
+  background-color: white;
+  
+}
+
+
+
+
+ .nosotros img{
+  height: auto;
+  width: 420px;
+}
+
+.nosotros-text {
+  width: 550px;
+}
+
+.main {
+  width: 1130px;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: absolute;
+}
+
+.nosotros-text h1{
+  color: #9cb2a5;
+  font-size: 80px;
+  text-transform: capitalize;
+}
+
+.nosotros-text h5{
+  color: #9cb2a5;
+  font-size: 25px;
+  text-transform: capitalize;
+  margin-bottom: 25px;
+  letter-spacing: 3px;
+}
+
+
+.nosotros-text span{
+  color: #733236;
+  font-size: 25px;
+  text-transform: capitalize;
+  margin-bottom: 25px;
+  letter-spacing: 3px;
+}
+
+
+.nosotros-text p{
+  color: #9d7982;
+  letter-spacing: 1px;
+  line-height: 28px;
+  font-size: 18px;
+  margin-bottom: 45px;
+}
+
+.nosotros-text button{
+  background: #733236;
+  color: #9cb2a5;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  margin-bottom: 45px;
+  padding: 13px 30px;
+  border-radius: 30px;
+  transition: .4s;
+}
+
+
+.nosotros-text button:hover{
+  background: transparent;
+  border: 2px solid #733236;
+  cursor:pointer;
+ 
+}
+
